# Music_Communication_APP

./: README.md
client_v4/: client_socket.cpp  client_socket.h  client_v4.pro  handle_json.cpp  handle_json.h  main.cpp  musicwindow.cpp  musicwindow.h  musicwindow.ui  resource.qrc  resources.qrc  signwindow.cpp  signwindow.h  signwindow.ui
server_communication/: server_v1  server_v1.cpp  server_v2  server_v2.cpp
server_communication/server_v3/: CMakeLists.txt  Protocol.txt  server_v3.cpp
server_communication/server_v3/include/: Connection.h  Database.h  Epoll.h  Handle.h  Socket.h  Worker.h
server_communication/server_v3/src/: Connection.cpp  Database.cpp  Epoll.cpp  Handle.cpp  ProtocolMsg.h  Socket.cpp
